--- a/src/SplashScreen.css
+++ b/src/SplashScreen.css
@@ -13,3 +13,28 @@
     margin-left: 420px;
     font-size: 20px;
   }
+  /* Responsive styles */
+@media (max-width: 768px) {
+  .logo {
+    max-width: 90%;
+    margin-top: 30px;
+  }
+
+  .splash-screen-text {
+    font-size: 18px;
+    margin-top: 15px;
+  }
+}
+
+@media (max-width: 480px) {
+  .logo {
+   margin-left: 20px;
+    margin-top: 220px;
+  }
+
+  .splash-screen-text {
+    font-size: 16px;
+    margin-top: 10px;
+    margin-left: 90px;
+  }
+}
